--- a/index.html.html
+++ b/index.html.html
@@ -22,15 +22,11 @@
 <body>
     <div id="data-container">
         <h1 data-testid="slackUserName">Uchidiuno Olisaemeka</h1>
-        <picture>
-            <source srcset="https://ca.slack-edge.com/T05FFAA91JP-U05RB15H0NP-ab3ec5fe3086-480" media="(min-width: 1024px)">
-            <source srcset="https://ca.slack-edge.com/T05FFAA91JP-U05RB15H0NP-ab3ec5fe3086-320" media="(min-width: 768px)">
-            <img src="https://ca.slack-edge.com/T05FFAA91JP-U05RB15H0NP-ab3ec5fe3086-48" alt="Description of the image">
-          </picture> 
         <p data-testid="age">24 years old</p>
         <p data-testid="location">Abuja, Nigeria</p>
         <p data-testid="myTrack">Frontend</p>
         <a href="https://github.com/Loudmouth05/hngxStage1/blob/main/Untitled-1.html">Source Code</a>
+        <p data-testid="slackDisplayImage"></p>
         <p data-testid="currentUTCTime"></p>
     </div>
 
